模拟堆内存溢出场景