@@ -12,6 +12,16 @@ public class MetaspaceOverflowExample {
    * 设置元空间大小为 10M<br>
    * -XX:MetaspaceSize=10m -XX:MaxMetaspaceSize=10m
    *
+   * 完整参数配置
+   * -XX:+UseParNewGC 
+   * -XX:+UseConcMarkSweepGC 
+   * -XX:MetaspaceSize=10m 
+   * -XX:MaxMetaspaceSize=10m
+   * -XX:+PrintGCDetails 
+   * -Xloggc:gc.log 
+   * -XX:+HeapDumpOnOutOfMemoryError 
+   * -XX:HeapDumpPath=./
+   *
    * @param args
    */
   public static void main(String[] args) {
